--- a/_data/data.yml
+++ b/_data/data.yml
@@ -13,8 +13,8 @@ contact:
 
 languages:
   - idiom: English
-  - idiom: Russian
-  - idiom: French
+  - idiom: Urdu
+  - idiom: Punjabi
 
 education:
   - degree: MSc in Informatics
