update page title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: CV | A jekyll template
-description:  A beautiful template for your CV.
+title: CV | Najam Ul Saqib
+description:  My resume made with jekyll
 url: https://jekyll-cv.stavrospanakakis.com
 baseurl: ''
 theme_skin: blue
