--- a/_data/data.yml
+++ b/_data/data.yml
@@ -51,23 +51,14 @@ profile: |
 
 # Experience
 experience:
-  - role: Security Engineer - Red Team (Cloud Security & VA/PT)
-    time: October 2022 - Present
-    company: Contour Software
+  - role: Full Stack Software Developer & Security Engineer
+    time: December 2021 - Present
+    company: Upwork
     details: |
-      I am currently working as a Security Engineer at Contour Software, as part of the Perseus Group where I am responsible for handling the red team operations and conducting vulnerability assessment and penetration testing (VAPT) for three business units, Charter Software, Ideal, C-Systems. My primary expertise is in conducting vulnerability assessment and penetration testing (VAPT) and red team operations and also securing Azure infrastructure. In this role, I am responsible for identifying and mitigating security risks in the organization's systems and networks, and ensuring the security of the Azure infrastructure.
+      I am currently working on Upwork as Full stack developer & security engineer under my company Tecvity, my responsibilities include creating robust, optimized and most importantly secure software solutions.
 
     technologies_used: |
       Defender for Cloud, Azure, Burp Suite, OWASP ZAP
-
-
-  - role: Application Security Engineer
-    time: December 2021 - October 2022
-    company: Systems Ltd
-    details: |
-      I had the opportunity to work as an Application Security Engineer at Systems Ltd, where I was responsible for ensuring the security of the organization's web applications. My primary expertise was in performing static application security testing (SAST), vulnerability assessment and penetration testing (VAPT) and also performed red teaming. During my tenure, I was responsible for identifying and mitigating security risks in the organization's systems and networks by mimicking the actions of a malicious attacker.
-    technologies_used: |
-      HCL AppScan Source, HCL AppScan Standard, Nessus Premium, BurpSuite, OWASP ZAP, ScoutSuite, Azure
 
   - role: Software Engineer
     time: May 2021 - December 2021
