update the tech used in upwork job

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -58,7 +58,7 @@ experience:
       I am currently working on Upwork as Full stack developer & security engineer under my company Tecvity, my responsibilities include creating robust, optimized and most importantly secure software solutions.
 
     technologies_used: |
-      Defender for Cloud, Azure, Burp Suite, OWASP ZAP
+      MERN Stack, .NET, Web Security, MongoDB, MySQL, Redux
 
   - role: Software Engineer
     time: May 2021 - December 2021
