include zap team link

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -111,4 +111,4 @@ volunteering:
     role: Open Source Contributor
     company: Github
     details: |
-      I have been contributing to various open source projects that includes but not limited to OWASP Zaproxy. I have PRs for various security and non-security repositories that can be checked on my Github Profile
+      I have been contributing to various open source projects that includes but not limited to OWASP Zaproxy. I have PRs for various security and non-security repositories that can be checked on my Github Profile, plus I am extended team member of ZAP, more: https://www.zaproxy.org/docs/team/njmulsqb/
