--- a/_data/data.yml
+++ b/_data/data.yml
@@ -54,7 +54,7 @@ experience:
       I am currently working on Upwork as Full stack developer, my responsibilities include developing robust, optimized and most importantly secure software solutions.
 
     technologies_used: |
-      MERN Stack, .NET, Web Security, MongoDB, MySQL, Redux
+      ReactJS, NodeJS, ExpressJS, NextJS, Web Security, MongoDB, MySQL, Redux
 
   - role: Software Engineer
     time: May 2021 - December 2021
