--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: CV | Najam Ul Saqib
+title: Resume | Najam Ul Saqib
 description:  My resume made with jekyll
 url: https://njmulsqb.github.io/my-resume
 baseurl: ''
